fixed visible pagination crops bug

--- a/app/index.css
+++ b/app/index.css
@@ -118,6 +118,7 @@ hrml {
     background-color: #fafbfc;
     border: 1px solid red;
     color: red;
+    border-radius: 5px;
 }
 
 a {
